apps/services/media/qbittorrent/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
  annotations:
    link.argocd.argoproj.io/external-link: https://downloads.gruber.dev.br
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: emmercm/qbittorrent:4.5.1
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
            - name: traffic
              containerPort: 6881
              protocol: TCP
            - name: traffic-udp
              containerPort: 6881
              protocol: UDP
            - name: entry-tcp
              containerPort: 50000
              protocol: TCP
            - name: entry-udp
              containerPort: 50000
              protocol: UDP
          startupProbe:
            httpGet:
              path: /
              port: web
            failureThreshold: 60
            periodSeconds: 20
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /
              port: web
            failureThreshold: 60
            periodSeconds: 20
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /
              port: web
            failureThreshold: 15
            periodSeconds: 5
            initialDelaySeconds: 15
          securityContext:
            allowPrivilegeEscalation: true
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 450m
              memory: 1024Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /data
            - name: downloads
              mountPath: /downloads
            - name: incomplete
              mountPath: /incomplete
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-storage
        - name: cache
          persistentVolumeClaim:
            claimName: qbittorrent-data
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-storage
        - name: incomplete
          persistentVolumeClaim:
            claimName: incomplete-storage
