apps/services/media/qbittorrent/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-internal
  labels:
    app: qbittorrent
  annotations:
    kube-vip.io/vipHost: qbittorrent
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: qbittorrent
  type: LoadBalancer
  loadBalancerIP: "192.168.1.145"
  loadBalancerClass: kube-vip.io/kube-vip-class
---
apiVersion: v1
kind: Service
metadata:
  name: torrent-tcp
  labels:
    app: qbittorrent
  annotations:
    kube-vip.io/vipHost: torrent-tcp
spec:
  ports:
  - name: traffic
    port: 6881
    targetPort: 6881
    protocol: TCP
  selector:
    app: qbittorrent
  type: LoadBalancer
  loadBalancerIP: "192.168.1.146"
  loadBalancerClass: kube-vip.io/kube-vip-class
---
apiVersion: v1
kind: Service
metadata:
  name: torrent-udp
  labels:
    app: qbittorrent
  annotations:
    kube-vip.io/vipHost: torrent-udp
spec:
  ports:
  - name: traffic-udp
    port: 6881
    targetPort: 6881
    protocol: UDP
  selector:
    app: qbittorrent
  type: LoadBalancer
  loadBalancerIP: "192.168.1.147"
  loadBalancerClass: kube-vip.io/kube-vip-class
---
apiVersion: v1
kind: Service
metadata:
  name: torrent-external-tcp
  labels:
    app: qbittorrent
  annotations:
    kube-vip.io/vipHost: torrent-external-tcp
spec:
  ports:
  - name: entry-tcp
    port: 50000
    targetPort: 50000
    protocol: TCP
  selector:
    app: qbittorrent
  type: LoadBalancer
  loadBalancerIP: "192.168.1.148"
  loadBalancerClass: kube-vip.io/kube-vip-class
---
apiVersion: v1
kind: Service
metadata:
  name: torrent-external-udp
  labels:
    app: qbittorrent
  annotations:
    kube-vip.io/vipHost: torrent-external-udp
spec:
  ports:
  - name: entry-udp
    port: 50000
    targetPort: 50000
    protocol: TCP
  selector:
    app: qbittorrent
  type: LoadBalancer
  loadBalancerIP: "192.168.1.149"
  loadBalancerClass: kube-vip.io/kube-vip-class
